tests/sema/fail/v15_fail_for_in_str.ep
# COMPILE_FAIL: for-in over str is not supported
fun main(): i64 {
    for i in "abc" {
        println(str(i))
    }
    ret 0
}
